--- a/test.html
+++ b/test.html
@@ -1,3 +1,15 @@
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>my plot</title>
+    <script type="text/javascript" src="https://cdn.bokeh.org/bokeh/release/bokeh-2.4.3.min.js"></script>
+    <script type="text/javascript">
+        Bokeh.set_log_level("info");
+    </script>
+  </head>
+  <body>
     <div class="bk-root" id="43f7912e-bd0d-4741-ab30-addd72cbdb62" data-root-id="1401"></div>
   
     <script type="application/json" id="1598">
@@ -37,3 +49,5 @@
         else document.addEventListener("DOMContentLoaded", fn);
       })();
     </script>
+  </body>
+</html>
